# 2025-tax-engine

./: .gitignore  README.md  pyproject.toml
config/: coverage_lock.json  intake_ocr_config.json
data/: reviewer_workflow_state.json
data/input/: 1095_a.json  1099_b.json  1099_misc.json  k1_example_passive_loss.json  taxpayer.json  w2.json
data/pilot_reports/: pilot_matrix.json  pilot_summary.md  scenario_01_basic_w2_household.json  scenario_02_schedule_c.json  scenario_03_investment_k1.json  scenario_04_missing_docs.json  scenario_05_multistate_tx_va.json
data/pilot_scenarios/scenario_01_basic_w2_household/: adjustments.json  taxpayer.json  w2.json
data/pilot_scenarios/scenario_02_schedule_c/: 1099_nec.json  adjustments.json  prior_year.json  taxpayer.json  w2.json
data/pilot_scenarios/scenario_03_investment_k1/: 1098_mortgage.json  1099_b.json  1099_div.json  1099_int.json  1099_nec.json  adjustments.json  donations.json  k1_example_nonpassive.json  k1_example_passive_income.json  (+1 more)
data/reviewer_packets/: scenario_01_basic_w2_household.md  scenario_02_schedule_c.md  scenario_03_investment_k1.md  scenario_04_missing_docs.md  scenario_05_multistate_tx_va.md
docs/: intake_pipeline_v1.md  reviewer_workflow.md
scripts/: case_extract_and_seed.py  generate_reviewer_packet.py  intake_hybrid_extract.py  normalize_real_case_local.py  run_pilot_scenarios.py
src/: __init__.py  engine.py  ingest.py  models.py  pdf_filler.py  preflight.py  utils.py  validator.py
src/forms/: __init__.py
src/schedules/: __init__.py
src/state/: __init__.py
tests/: test_smoke.py
(+30 files in other folders)
