[project]
name = "tax-engine-2025"
version = "0.1.0"
description = "Sanitized snapshot of a one-off 2025 tax calculation engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
